--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,8 @@
 .dropdown {
     position: relative;
     display: inline-block;
-    margin-left: -1600px;
+    float: left;
+    margin-top: -30px;
     
 }
 
@@ -60,6 +61,10 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
     color: #333;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    
 }
 
 /* Header styles */
@@ -106,16 +111,18 @@ footer {
     padding: 10px;
     background-color: #333;
     color: #fff;
-    margin-top: 370px;
+    
+    margin-top: auto;
 }
 
 #photo1 {
     width: 300px;
     height: 300px;
+    margin: 0 auto;
     display: block;
-    margin-left: 1500px;
-    margin-top: -200px;
-    border-radius: 100px;
+    border-radius: 50%;
+   margin-top: 100px;
+   
 }
 
 #about {
@@ -124,7 +131,7 @@ footer {
 
 .contact{
 
-    margin-top: 200px;
+   
     text-align: center;
 }
 
@@ -133,3 +140,22 @@ footer {
     text-align: center;
 
 }
+button {
+    background-color: #3498db;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+/* Hover effect */
+button:hover {
+    background-color: #2980b9;
+}
+
+#home_button {
+    float: right ;
+    margin-top: -30px;
+}   
